# irgpua

./: .clang-format  AUTHORS.txt  CMakeLists.txt  README.md
.github/workflows/: linter.yml
src/: apply_map_fix.cu  apply_map_fix.cuh  compact.cu  compact.cuh  fix_cpu.cu  fix_cpu.cuh  fix_gpu.cu  fix_gpu.cuh  histogram.cu  histogram.cuh  image.hh  main.cu  map_fix.cu  map_fix.cuh  pipeline.hh  reduce.cu  reduce.cuh  scan.cu  scan.cuh
src/cuda_tools/: alignement.hh  constants.hh  cuda_error_checking.cuh  memory_pool.cu  memory_pool.cuh  nvtx.cuh
